--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,12 @@ flutter:
     - assets/images/
     - assets/icons/
 
+
+flutter_assets:
+  assets_path: assets/images/
+  output_path: lib/core/constants/
+  filename: my_assets.dart
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
