--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   feather_icons: ^1.2.0
   flutter_screenutil: ^5.9.0
   animation_wrappers: ^3.0.0
+  flutter_quill: ^7.4.9
 
 dev_dependencies:
   flutter_test:
